# EMR

./: .gitignore  README.md  pyproject.toml
backend/: README.md  app.py  pyproject.toml
backend/docs/: conf.py  src.core.rst  src.models.soap.rst  src.models.summary.rst  src.prompts.rst  src.routes.api.rst  src.routes.rst  src.rst  src.services.extraction_service.rst  src.services.summary_service.rst
backend/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.core.doctree  src.core.llm.doctree  src.doctree  src.models.doctree  src.models.soap.doctree  src.models.summary.doctree  src.prompts.doctree  src.prompts.system.doctree  src.routes.api.doctree  src.routes.doctree  src.services.doctree  src.services.extraction_service.doctree  src.services.summary_service.doctree
backend/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.core.html  src.core.llm.html  src.html  src.models.html  src.models.soap.html  src.models.summary.html  src.prompts.html  src.prompts.system.html  src.routes.api.html  src.routes.html  src.services.extraction_service.html  src.services.html  src.services.summary_service.html
backend/notebooks/: mp4-gif.ipynb  prompting.ipynb  two-step.ipynb
backend/sample_data/: input.xlsx  output.xlsx
backend/src/core/: llm.py
backend/src/models/: soap.py  summary.py
backend/src/prompts/: system.py
backend/src/routes/: api.py
backend/src/services/: extraction_service.py  llm.py  summary_service.py
frontend/: index.html  package.json  (+1 more)
(+26 files in other folders)
