[project]
name = "ehr"
version = "0.1.0"
description = "Prototype to demo data extraction using LLM's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "ruff>=0.11.13",
]
