[project]
name = "ehr"
version = "0.1.0"
description = "Prototype to demo data extraction using LLM's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "moviepy>=2.2.1",
    "pandas>=2.3.0",
    "ruff>=0.11.13",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
]
